--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -1,49 +1,183 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
     <head>
-        <!--
-        Customize this policy to fit your own app's needs. For more guidance, see:
-            https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
-        Some notes:
-            * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
-            * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
-            * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
-                * Enable inline JS: add 'unsafe-inline' to default-src
-        -->
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
-        <meta name="format-detection" content="telephone=no">
-        <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-        <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>Hello World</title>
+        <!-- Required meta tags-->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <!-- Color theme for statusbar -->
+        <meta name="theme-color" content="#2196f3">
+        <!-- Your app title -->
+        <title>Visualizador</title>
+        <!-- Path to Framework7 Library Bundle CSS -->
+        <link rel="stylesheet" href="css/framework7.bundle.min.css">
+        <!-- Path to your custom app styles-->
+        <link rel="stylesheet" href="css/my-app.css">
     </head>
     <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+        <!-- App root element -->
+        <div id="app">
+
+            <!-- Statusbar overlay -->
+            <div class="statusbar"></div>
+
+            <!-- Your main view, should have "view-main" class -->
+            <div class="view view-main">
+                <!-- Initial Page, "data-name" contains page name -->
+                <div data-name="home" class="page">
+
+                    <!-- Top Navbar -->
+
+                    <!-- Bottom Toolbar -->
+
+                    <!-- Scrollable page content -->
+                    <div class="page-content">
+                        <div class="row no-gap">
+                            <div class="col-40 divcontallt">
+                                <div class="divcontt" id="divcontt">
+                                    <div class="row titulos">
+                                        <div class="col-30" style="padding-left: 10px; text-align: center;">
+                                            <H2 style="font-weight: bold; margin: 0px;">MÓDULO/</H2> 
+                                            <H2 style="font-weight: bold; margin: 0px;">CONSULT.</H2> 
+                                        </div>
+                                        <div class="col-10">
+
+                                        </div>
+                                        <div class="col-60" style="text-align: center;">
+                                            <H2 style="font-weight: bold;">TURNO/PACIENTE</H2> 
+                                        </div>
+                                    </div>
+                                    <div class="row contt" id="conttL">
+                                        <div class="col-30 divcontd">
+                                            <H5 id="modulo0" class="items" style="margin: 0px;"></H5>
+                                        </div>
+                                        <div class="col-10 divFlechaImagen" style="align-items: center;">
+                                            <img src="img/Flecha blanca-08.png" class="flechaImagen" alt=""/>
+                                        </div>
+                                        <div class="col-60 divcontd">
+                                            <H3 id="cliente0" class="items" style="margin: 0px;"></H3>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="divcontt2">
+                                    <div class="row contt">
+                                        <div class="col-30 divcontd">
+                                            <H5 id="modulo1" class="items" style="margin: 0px;"></H5>
+                                        </div>
+                                        <div class="col-10 divFlechaImagen" style="align-items: center;">
+                                            <img src="img/Flecha blanca-08.png" class="flechaImagen" alt=""/>
+                                        </div>
+                                        <div class="col-60 divcontd">
+                                            <H3 id="cliente1" class="items" style="margin: 0px;"></H3>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="divcontt2">
+                                    <div class="row contt">
+                                        <div class="col-30 divcontd">
+                                            <H5 id="modulo2" class="items" style="margin: 0px;"></H5>
+                                        </div>
+                                        <div class="col-10 divFlechaImagen" style="align-items: center;">
+                                            <img src="img/Flecha blanca-08.png" class="flechaImagen" alt=""/>
+                                        </div>
+                                        <div class="col-60 divcontd">
+                                            <H3 id="cliente2" class="items" style="margin: 0px;"></H3>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="divcontt2">
+                                    <div class="row contt">
+                                        <div class="col-30 divcontd">
+                                            <H5 id="modulo3" class="items" style="margin: 0px;"></H5>
+                                        </div>
+                                        <div class="col-10 divFlechaImagen" style="align-items: center;">
+                                            <img src="img/Flecha blanca-08.png" class="flechaImagen" alt=""/>
+                                        </div>
+                                        <div class="col-60 divcontd">
+                                            <H3 id="cliente3" class="items" style="margin: 0px;"></H3>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="divcontt2">
+                                    <div class="row contt">
+                                        <div class="col-30 divcontd">
+                                            <H5 id="modulo4" class="items" style="margin: 0px;"></H5>
+                                        </div>
+                                        <div class="col-10 divFlechaImagen" style="align-items: center;">
+                                            <img src="img/Flecha blanca-08.png" class="flechaImagen" alt=""/>
+                                        </div>
+                                        <div class="col-60 divcontd">
+                                            <H3 id="cliente4" class="items" style="margin: 0px;"></H3>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="col-60">
+
+                                <div class="row">
+                                    <div class="col-40"></div>
+                                    <div class="col-20 divLogo">
+                                        <img src="img/default.png" id="logoCambiar" class="logo"/>
+                                    </div>
+                                    <div class="col-40">
+                                        <div class="block">
+                                            <p class="row">
+                                                <a class="col"></a>
+                                                <button id="btnListaVisualizadores" class="col button popover-open" style="font-size: 20px;" data-popover=".popover-visualizadores"><i class="fas fa-tv"></i></button>
+                                                <button onclick="editarIdEmpresa()" class="col button" style="font-size: 20px;"><i class="fas fa-building"></i></button>
+                                                <button onclick="editarIpServidor()" class="col button" style="font-size: 20px;"><i class="fas fa-cogs"></i></button>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-100" style="text-align: center;">
+                                        <video id='video' style="width: 58vw; height: 60vh;">
+
+                                        </video>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="row no-gap">
+                            <div class="col-40 panelFecha" id="divFecha">
+                                <div class="fecha" id="fecha"></div>
+                                <div class="hora" id="hora"></div>
+                            </div>
+                            <div class="col-60 panelMensaje" id="mesaje">
+                                <div class="mensaje">
+                                    <MARQUEE WIDTH=100%>Bienvenidos</MARQUEE>                    
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Popovers -->
+                        <div class="popover popover-visualizadores">
+                            <div class="popover-inner">
+                                <div class="block" id="divListaVisualizadores">
+                                    <p>Seleccionar visualizador</p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
             </div>
         </div>
+        <!-- Path to Framework7 Library Bundle JS-->
+        <script type="text/javascript" src="js/framework7.bundle.min.js"></script>
+        <!-- Path to your app js-->
+        <script type="text/javascript" src="js/my-app.js"></script>
+        <script type="text/javascript" src="js/font-awesome.js"></script>
+
         <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
