--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -167,6 +167,14 @@
                                 </div>
                             </div>
                         </div>
+                        
+                        <!--popup llamado-->
+                        <div class="popup popup-popupLlamado" style="height: 70vh; background: transparent; box-shadow: none;">
+                            <div class="block" style="text-align: center; background: white; height: 40vh; margin-top: 28vh;">
+                                <p id="tituloLlamado" style="font-size: 7vh; margin: 0px; padding-top: 7vh;"></p>
+                                <p id="textoLlamado" style="font-size: 7vh; color: red; margin: 0px; margin-top: 1vh;"></p>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
